2002-12-06  Sam Steingold  <sds@gnu.org>

	* makemake.in (check-sources): check that there are no variables
	of type gcv_object_t - only pointers to it (see lispbibl.d)

2002-12-06  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/demos/sokoban.lisp: provide "sokoban"
	(sokoban): check that *display* is alive
	* modules/clx/new-clx/demos/qix.lisp: provide "qix"
	* modules/clx/new-clx/demos/clx-demos.lisp (CLX-DEMOS): use XLIB
	and EXT and shadow some symbols to avoid conflicts
	(getenv): removed (there is one in EXT)
	replaced the EVAL-WHEN kludge with REQUIRE
	* modules/clx/new-clx/clx.lisp (closed-display-p, x-error): export
	use PRINT-OBJECT, not :PRINT-FUNCTION DEFSTRUCT option
	use (DEFSETF foo set-foo) instead of (SETF (FDEFINITION '(SETF
	foo)) #'set-foo) for all setters
	(make-gcontext): new function (for clue)
	(x-error, closed-display): new conditions (complete)
	(request-error, resource-error, request-error, resource-error)
	(access-error, alloc-error, atom-error, colormap-error)
	(connection-failure, cursor-error, device-busy, drawable-error)
	(font-error, gcontext-error, id-choice-error, implementation-error)
	(length-error, lookup-error, match-error, missing-parameter)
	(name-error, pixmap-error, reply-length-error, reply-timeout)
	(sequence-error, server-disconnect, unexpected-reply)
	(unknown-error, value-error, window-error): new conditions (just
	the stubs)
	* modules/clx/new-clx/clx.f (closed_display_error): new function
	(isa_struct_p): use memq() instead of an explicit loop
	(ensure_living_display): return Bool indicator of whether the
	display has been closed
	(CLOSED-DISPLAY-P): new public function
	(CLOSE-DISPLAY): mark the display as closed
	by setting fp_pointer to NULL
	(display_hash_table, pop_display, general_lookup): signal a
	CLOSED-DISPLAY error when ensure_living_display() returns false
	(get_ptr_object_and_display, get_xid_object_and_display): use
	pop_display() instead of ensure_living_display()